IoT_Fermented_Food/manifests-k8s/istio/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-ms-mtls
spec:
  host: auth-ms.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: measure-ms-mtls
spec:
  host: measure-ms.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: publisher-ms-mtls
spec:
  host: publisher-ms.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
